<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>AstToCalls</groupId>
	<artifactId>MethodCalls</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<repositories>
		<repository>
			<id>stg-mubench</id>
			<url>http://www.st.informatik.tu-darmstadt.de/artifacts/mubench/mvn/</url>
		</repository>
		<repository>
			<id>stg-mudetect</id>
			<url>http://www.st.informatik.tu-darmstadt.de/artifacts/mudetect/mvn/</url>
		</repository>
	</repositories>

	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>
	
	 <build>
        <extensions>
            <!-- Enabling the use of FTP -->
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ftp</artifactId>
                <version>2.2</version>
            </extension>
        </extensions>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <id>episode</id>
                        <configuration>
                            <archive>
                                <manifest>
                                    <mainClass>exec.episodeMining.runner</mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                            <finalName>MethodCalls</finalName>
                            <appendAssemblyId>false</appendAssemblyId>
                        </configuration>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.7</version>
            </plugin>
        </plugins>
    </build>
	
	<dependencies>
		<dependency>
			<groupId>de.tu-darmstadt.stg</groupId>
			<artifactId>mubench.cli</artifactId>
			<version>0.0.11</version>
		</dependency>
		<dependency>
			<groupId>cc.kave</groupId>
			<artifactId>cc.recommenders.evaluation</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.tycho</groupId>
			<artifactId>org.eclipse.jdt.core</artifactId>
			<version>3.11.1.v20150902-1521</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jdt</groupId>
			<artifactId>org.eclipse.jdt.annotation</artifactId>
			<version>1.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.core</groupId>
			<artifactId>runtime</artifactId>
			<version>3.10.0-v20140318-2214</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.birt.runtime</groupId>
			<artifactId>org.eclipse.core.resources</artifactId>
			<version>3.10.0.v20150423-0755</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.text</groupId>
			<artifactId>org.eclipse.text</artifactId>
			<version>3.5.101</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.findbugs</groupId>
			<artifactId>bcel-findbugs</artifactId>
			<version>6.0</version>
		</dependency>
		<dependency>
			<groupId>cc.kave</groupId>
			<artifactId>cc.kave.episodes</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>de.tu-darmstadt.stg.mudetect</groupId>
			<artifactId>aug</artifactId>
			<version>0.0.2-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>de.tu-darmstadt.stg.mudetect</groupId>
			<artifactId>mubench</artifactId>
			<version>0.0.2-SNAPSHOT</version>
		</dependency>
		<!-- Testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.9.5</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>de.tu-darmstadt.stg.mudetect</groupId>
			<artifactId>aug</artifactId>
			<version>0.0.2-SNAPSHOT</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>